assets/cc/css/style.css
/***
Bootstrap Line Tabs by @keenthemes
A component of Metronic Theme - #1 Selling Bootstrap 3 Admin Theme in Themeforest: http://j.mp/metronictheme
Licensed under MIT
***/
/*Menu */
@font-face {
    font-family: Trumpgothiceastbold;
    src: url('./../fonts/trump_gothic_east_bold.ttf');
}
@font-face {
    font-family: Gothambold;
    src: url('./../fonts/gotham-bold.ttf');
}
@font-face {
    font-family: Gothamlight;
    src: url('./../fonts/gotham-rounded-light.otf');
}
@font-face {
    font-family: Gothambook;
    src: url('./../fonts/GothamRoundedBook_21018.ttf');
}
@font-face {
    font-family: Gothammedium;
    src: url('./../fonts/Gotham Rounded Medium.otf');
}
@font-face {
    font-family: westfalia;
    src: url('./../fonts/westfalia.ttf');
}
@font-face {
    font-family: kingbasil;
    src: url('./../fonts/King-Basil-Lite.otf');
}

.titleFont {
	font-family: kingbasil, sans-serif;
	position: relative;
	padding-top: 80px;
	font-size: 100px;
	/*color: #f7e772;*/
    color: #fff;
    -ms-transform: rotate(-12deg); /* IE 9 */
    -webkit-transform: rotate(-12deg); /* Chrome, Safari, Opera */
    transform: rotate(-12deg);
}

.shuttleingBox {
	text-align: center;
	background: #ea5b55;
	color: #ffffff;
	width: 240px;
	height: 60px;
	line-height: 60px;
	font-size: 40px;
	margin: auto;
	font-family: Trumpgothiceastbold;
	letter-spacing: 8px;
	position: relative;
	top: -40px;
}

#csl-item1 {
    /*background:url(../images/homepage/slider/Slide01.jpg);*/
    background-repeat: no-repeat;   
    background-position: center top; 
    background-size: cover;
}

#csl-item2 {
    background:url(../images/homepage/slider/Slide02.jpg); 
    background-repeat: no-repeat;   
    background-position: center top; 
    background-size: cover;
}

#csl-item3 {
    background:url(../images/homepage/slider/Slide03.jpg); 
    background-repeat: no-repeat;   
    background-position: center top; 
    background-size: cover;
}

.carousel-image {
    width: 100%;
    height: 100%; 
    text-align: center;
    align-content: center;
}

.no-margin {
    margin: 0 !important;
}
.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6{
    font-family: Gothambold;
}
.navbar-brand{
    padding: 15px 0px;
}
.navbar-toggle{
    padding: 25px 20px;
    margin-top: 15px;
    background-color: #27357C;
    border: 1px solid #27357C;
    border-radius: 0px;
}
.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover{
    background-color: #ea5b55;
    border: 1px solid #ea5b55;
}
.navbar-nav {
    margin: 16px -15px;
    font-size: 19px;
}
.navbar-lang{
    position: absolute;
    top: 20px;
    right: 20px;
}
/* Tabs panel */
.nav-tabs{
    font-size: 18px;
    font-family: Gothammedium;
}
.tabbable-panel {
  padding:0% 9%;
}

/* Default mode */
.tabbable-line > .nav-tabs {
  border: none;
  margin: 0px;
}
.tabbable-line > .nav-tabs > li > a {
  border: 0;
  margin-right: 0;
  color: #737373;
}
.tabbable-line > .nav-tabs > li > a > i {
  color: #a6a6a6;
}
.tabbable-line > .nav-tabs > li.open, .tabbable-line > .nav-tabs > li:hover {
  border-bottom: 4px solid #fbcdcf;
}
.tabbable-line > .nav-tabs > li.open > a, .tabbable-line > .nav-tabs > li:hover > a {
  border: 0;
  background: none !important;
  color: #333333;
}
.tabbable-line > .nav-tabs > li.open > a > i, .tabbable-line > .nav-tabs > li:hover > a > i {
  color: #a6a6a6;
}
.tabbable-line > .nav-tabs > li.open .dropdown-menu, .tabbable-line > .nav-tabs > li:hover .dropdown-menu {
  margin-top: 0px;
}
.tabbable-line > .nav-tabs > li.active {
  border-bottom: 4px solid #f3565d;
  position: relative;
}
.tabbable-line > .nav-tabs > li.active > a {
  border: 0;
  color: #333333;
}
.tabbable-line > .nav-tabs > li.active > a > i {
  color: #404040;
}
.tabbable-line > .tab-content {
  margin-top: -3px;
  background-color: transparent;
  border: 0;
  border-top: 4px solid #C2C2C2;
  padding: 15px 0;
}
.portlet .tabbable-line > .tab-content {
  padding-bottom: 0;
}

/* Below tabs mode */

.tabbable-line.tabs-below > .nav-tabs > li {
  border-top: 4px solid transparent;
}
.tabbable-line.tabs-below > .nav-tabs > li > a {
  margin-top: 0;
}
.tabbable-line.tabs-below > .nav-tabs > li:hover {
  border-bottom: 0;
  border-top: 4px solid #fbcdcf;
}
.tabbable-line.tabs-below > .nav-tabs > li.active {
  margin-bottom: -2px;
  border-bottom: 0;
  border-top: 4px solid #f3565d;
}
.tabbable-line.tabs-below > .tab-content {
  margin-top: -10px;
  border-top: 0;
  border-bottom: 1px solid #eee;
  padding-bottom: 15px;
}

span.step {
  background: #EA5B55;
  border-radius: 1.8em;
  -moz-border-radius: 1.8em;
  -webkit-border-radius: 1.8em;
  color: #ffffff;
  display: inline-block;
  font-weight: bold;
  line-height: 2.6em;
  margin-left: 65px;
  text-align: center;
  width: 2.6em; 
  font-size: 32px;
}
.jsRoundTripMessage{
    text-align: center;
    font-family: Gothamlight;
    font-size: 11px;
    margin-top: 5px;    
}
/* .panel-login {
    border-color: #ccc;
    -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
    -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
} */
.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
    background-color: transparent;
}
.panel{
    background-color: transparent;
    box-shadow: none;
    -webkit-box-shadow: 0px;
}
.panel-login>.panel-heading {
    color: #00415d;
    background-color: #25377d;
    border-color: transparent;
    text-align:center;
    padding: 0px 15px;
    border-bottom: 0px solid transparent;
    font-family: Gothambook;
}
.tabone{
    padding:15px;
}
.panel-heading .active .tabone{
    background-color: #4577d8;
    border-color: #4577d8;
    padding:15px;
}
.panel-login>.panel-heading a{
    text-decoration: none;
    color: #fff;
    font-weight: bold;
    font-size: 18px;
    /* -webkit-transition: all 0.1s linear;
    -moz-transition: all 0.1s linear;
    transition: all 0.1s linear; */
}
/* ... */

